# decision_support_system

./: .gitignore  Dockerfile  MId_Term_Project.ipynb  Model_Deploy.ipynb  README.md  fly.toml  predict.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml  test-coverage.yml
backend/: .coveragerc  .dockerignore  Dockerfile  data_validator.py  model_registry.py  monitoring.py  predict.py  pytest.ini  requirements.txt
frontend/: .dockerignore  .env.example  Dockerfile  app.py  requirements.txt
model_training/: MId_Term_Project.ipynb  Model_Deploy.ipynb  train.py
